# btnk_mae

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  train.py  train_engine.py
btnk_mae/: __init__.py  btnk_mae_decoder.py  btnk_mae_encoder.py  mae_decoder.py  mae_encoder.py  patch_reconstruct.py  upscaler.py
btnk_mae/utils/: datasets.py  lr_sched.py  misc.py  optim.py  patchify.py  pos_embed.py  process_img.py
configs/: config.yaml  finetune.yaml  habitat_pano.yaml  train.yaml
configs/train_cfg/: finetune.yaml  train.yaml
examples/: demo.ipynb  pano_demo.ipynb
