[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "btnk_mae"
version = "0.0.0"
description = "Bottlenecked Masked AutoEncoder for Compact Image Representations"
authors = [
  { name="Zhaoze Wang" }
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "hydra-core>=1.3.0",
    "numpy>=2.2.0",
    "transformers>=4.56.0",
    "timm>=1.0.20",
    "pillow>=11.3.0",
    "matplotlib>=3.10.6",
    "wandb>=0.22.0",
    "datasets>=4.1.0"
]

[tool.setuptools.packages.find]
include = ["btnk_mae", "btnk_mae.*"]
